Commit 30/05/2021  - Added delete Alumno for AlumnoDetalleActivity and update RecyclerView from Fragment  - Added util class TinyDB for easier use of SharedPreferences  - Fixed errors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="mis_alumnos">Mis Alumnos</string>
+    <string name="title_activity_alumno_tab">AlumnoTabActivity</string>
+    <string name="tab_text_1">HOME</string>
+    <string name="tab_text_2">RANKING</string>
 </resources>
