Bug fixes and small changes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="volver">VOLVER</string>
     <string name="loadsplashimg">loadsplashimg</string>
     <string name="ayuda">Ayuda</string>
+    <string name="rewards">Rewards</string>
+    <string name="recompensas">Recompensas</string>
 </resources>
