--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,29 @@
     <string name="ayuda">Ayuda</string>
     <string name="rewards">Rewards</string>
     <string name="recompensas">Recompensas</string>
+    <string name="primer_apellido">Primer Apellido</string>
+    <string name="segundo_apellido">Segundo Apellido</string>
+    <string name="a_adir_alumno">AÑADIR ALUMNO</string>
+    <string name="nombre">Nombre</string>
+    <string name="curso_primero_segundo">Curso (Primero, Segundo...)</string>
+    <string name="nombre2">Nombre:</string>
+    <string name="apellidos">Apellidos:</string>
+    <string name="puntos">Puntos:</string>
+    <string name="c_digo">CÓDIGO:</string>
+    <string name="volver_a_login">volver a login</string>
+    <string name="c_digof">Código</string>
+    <string name="login">Login</string>
+    <string name="introduzca_su_c_digo_de_alumno">Introduzca su código de alumno</string>
+    <string name="contrase_a">Contraseña</string>
+    <string name="correo_electr_nico">Correo electrónico</string>
+    <string name="confirmar_contrase_a">Confirmar contraseña</string>
+    <string name="registrarse">Registrarse</string>
+    <string name="nombre_de_usuario">Nombre de usuario</string>
+    <string name="a_adir_clase">AÑADIR CLASE</string>
+    <string name="puntos1">puntos</string>
+    <string name="apellidos1">Apellidos</string>
+    <string name="apellido2">Apellido2</string>
+    <string name="textview">TextView</string>
+
+
 </resources>
